<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="30.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:text="@string/debug_network_upload" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/encryption" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="0.2" />
        <Button android:id="@id/start_upload" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_start_to_upload" android:layout_weight="0.4" />
        <Button android:id="@id/stop_upload" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_stop_to_upload" android:layout_weight="0.4" />
    </LinearLayout>
    <TextView android:id="@id/upload_process_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>