<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/activity_mobile_register_main" android:background="@drawable/register_notice_bg" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/dialog_margin_top" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="23.0sp" android:textStyle="bold" android:textColor="@color/text_header" android:id="@id/text_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/register_notice_header" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_above="@id/foot" android:layout_below="@id/text_header" android:layout_marginStart="2.0dip" android:layout_marginEnd="2.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/text_content" android:id="@id/text_main" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/register_notice_body" />
            <TextView android:textSize="16.0sp" android:textColor="@color/text_content" android:gravity="end" android:layout_gravity="right" android:id="@id/text_foot" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/register_notice_footer" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/foot" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginStart="2.0dip" android:layout_marginEnd="2.0dip">
            <CheckBox android:layout_gravity="center_vertical" android:id="@id/checkBox" android:background="@drawable/register_notice_checkbox_bg" android:padding="0.0dip" android:layout_width="25.0dip" android:layout_height="25.0dip" android:button="@null" android:layout_marginEnd="5.0dip" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@color/text_content" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/text_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/check_box_text" />
        </LinearLayout>
        <Button android:textSize="17.0sp" android:textColor="@color/button_color" android:id="@id/okBtn" android:background="@drawable/register_notice_bt_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="14.0dip" android:text="@string/register_info_ok" />
    </LinearLayout>
</RelativeLayout>